// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /quotations/:id error cases should throw Validation Error if quotation id is invalid 1`] = `
{
  "code": "10001",
  "detail": [
    {
      "msg": "{"matches":"id must match /^[0-9]{12}$/ regular expression"}",
      "path": "id",
      "value": "xxx",
    },
  ],
  "type": "VALIDATION_ERROR",
}
`;

exports[`GET /quotations/:id error cases should throw error if quotation is not found 1`] = `
[MockFunction spyHandlerGetQuotationById] {
  "calls": [
    [
      QuotationIdParamDto {
        "id": "182379172831",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`GET /quotations/:id error cases should throw error if quotation is not found 2`] = `
[MockFunction] {
  "calls": [
    [
      "182379172831",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`GET /quotations/:id error cases should throw error if quotation is not found 3`] = `
{
  "code": "10004",
  "detail": "Quotation not found",
  "type": "RESOURCES_NOT_FOUND",
}
`;

exports[`GET /quotations/:id success cases should return correct response 1`] = `
[MockFunction spyHandlerGetQuotationById] {
  "calls": [
    [
      QuotationIdParamDto {
        "id": "182379172831",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`GET /quotations/:id success cases should return correct response 2`] = `
[MockFunction] {
  "calls": [
    [
      "182379172831",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": "{"quotationId":"182379172831","expireAt":"2022-05-21T00:05:00.000Z","scheduleAt":"2022-05-21T00:05:00.000Z","deliveryBy":"2022-05-21T01:00:00.000Z","stops":[{"coordinates":{"lat":"22.335313","lng":"114.175840"},"address":"999 Prince Edward Road"},{"coordinates":{"lat":"22.335313","lng":"114.175840"},"address":"InnoCentre, 72 Tat Chee Avenue"}],"location":"Hong Kong","item":{"quantity":1,"weight":1,"categories":["test"],"handlingInstructions":["test"]}}",
    },
  ],
}
`;

exports[`GET /quotations/:id success cases should return correct response 3`] = `
{
  "deliveryBy": "2022-05-21T01:00:00.000Z",
  "expireAt": "2022-05-21T00:05:00.000Z",
  "item": {
    "categories": [
      "test",
    ],
    "handlingInstructions": [
      "test",
    ],
    "quantity": 1,
    "weight": 1,
  },
  "location": "Hong Kong",
  "quotationId": "182379172831",
  "scheduleAt": "2022-05-21T00:05:00.000Z",
  "stops": [
    {
      "address": "999 Prince Edward Road",
      "coordinates": {
        "lat": "22.335313",
        "lng": "114.175840",
      },
    },
    {
      "address": "InnoCentre, 72 Tat Chee Avenue",
      "coordinates": {
        "lat": "22.335313",
        "lng": "114.175840",
      },
    },
  ],
}
`;
